--- a/themes/fadmashion_commerce/css/front.css
+++ b/themes/fadmashion_commerce/css/front.css
@@ -10,6 +10,8 @@ a:hover {text-decoration: underline; }
 
 .button, .form-submit {-moz-border-radius:4px 4px 4px 4px;background:url("../images/b_bg_brown.jpg") repeat scroll left top transparent;border:medium none;color:#FFFFFF;font-family:"museo-sans-1","museo-sans-2",Helvetica;font-size:12px;font-style:normal;margin:10px 0;padding:6px 12px;}
 
+#fb_js_pb{display: none;}
+
 /* content  */
 
 #box{ width: 320px; margin: 3% 0 0 6%;; float: left;}
@@ -20,6 +22,7 @@ span{color: #fff; font-weight:500}
 h1 {color:#FFFFFF;font-size:22px;font-weight:300;margin:0 0 2px;}
 h2 {color:#C5B5A8;font-size:15px;font-weight:700;line-height:22px;margin:0 0 8px;}
 h2 span {color:#FFFFFF;font-weight:700;}
+h3 {color:#8A766B;font-family:Georgia,"Times New Roman",Times,serif;font-size:11px;font-style:italic;font-weight:normal;margin:0 0 7px;text-align:right;}
 .logo{border-bottom: 1px solid #392d26; margin-top: 0px; margin-bottom: 16px; padding-bottom: 12px;}
 .logo img{margin-bottom: 12px; }
 
@@ -28,31 +31,73 @@ h2 span {color:#FFFFFF;font-weight:700;}
 .red {background-image:url("../images/b_bg_red.jpg");}
 .buttonFB {display:block;margin:25px 0;}
 
-#block-user-login {height: 93px; }
-.login h2 {font-weight: normal; color:#C5B5A8;font-size:13px;line-height:13px;margin:0 0 6px;padding:0;text-transform:uppercase;}
-.login {height: auto; overflow: auto; background: none repeat scroll 0 0 #000000; }
-.login .form-text {color: #72655C; font-size: 12px; width: 121px; background:url("../images/bg_field.jpg") repeat-x scroll left top transparent;
-border:1px solid #CBC1BE; height: 23px; line-height: 23px;  margin:4px 0 2px;  padding-left:4px;}
-.login .form-item, .login .form-actions {margin: 0px !important; display: inline}
-.login .form-submit {float:right;font-size:12px;line-height:13px;padding:5px 10px; width: 64px; margin-right: 3px;  }
-.login  .form-submit:hover {background-position: left bottom;}
-.login a.forgotPassword {color:#8A766B;font-family:Georgia,"Times New Roman",Times,serif;font-size:11px;font-style:italic;position:relative;top:6px;}
-.login a.forgotPassword:hover {text-decoration: none; color: #fff; }
-.form-item input.error, .form-item textarea.error, .form-item select.error {
-border:0px solid red !important;
-}
+/* registration */
 
-label { font-size: 12px; color:black;font-weight: normal !important; margin-bottom: 5px;}
+
+.form-text{color: #72655C; background: url(../images/bg_field.jpg) top left  repeat-x; height: 23px; line-height:23px; border: 1px solid #cbc1be; padding-left: 4px; width: 230px; margin: 4px 0 2px 0;}
+.form-item input:focus { border-color: #BC4038 }
+
+.registrationForm {margin-bottom: 16px; }
+.registrationForm .form-text{width: 255px; display: block; margin: 0 0 8px 0;}
+.registrationForm .form-submit{margin-top: 20px; padding: 5px; line-height: 13px; width: 110px;}
+.registrationForm .password-field, .registrationForm .password-confirm{width: 160px; display: inline;}
+.registrationForm #edit-pass-clear, .registrationForm #edit-pass-confirm-clear{width: 160px; display: inline;}
+
+.registrationForm  .form-actions {text-align: center;}
+#edit-field-last-name #message_box, #edit-field-first-name #message_box {width: 120px; }
+#edit-field-last-name #message_box {margin-left: 125px;}
+#box a:hover{}
+#edit-field-first-name input, #edit-field-last-name input {width: 121px;display: inline;}
+#edit-field-first-name { margin-right: 5px; float: left; }
+.button, .form-submit {border: none; padding: 6px 12px;margin: 10px 0; border-radius:4px; -webkit-border-radius: 4px; -moz-border-radius: 4px; background: url(../images/b_bg_brown.jpg) top left; repeat: repeat-x; font-size: 12px; color: #fff; font-family:"museo-sans-1","museo-sans-2", Helvetica; font-style: normal;}
+.button:hover, .form-submit:hover{background-position: bottom left; color: #fff; cursor:pointer;}
+.red{background-image: url(../images/b_bg_red.jpg)}
+
+
+
+#block-user-login { }
+.login{background: #000;}
+.login .pad{}
+.login h2{font-size: 13px; line-height: 13px; text-transform:uppercase; margin: 0 0 6px 0;padding: 0; color: #c5b5a8;}
+.login .form-submit{float: right; font-size: 12px; padding: 5px; line-height: 13px;}
+.login .form-text{width: 121px;}
+.login .form-item{float: left; width: 130px;}
+.login a.forgotPassword{font-size: 11px; font-family: Georgia, "Times New Roman", Times, serif; font-style:italic; position: relative; top: 6px; color: #8a766b;}
+.login a.forgotPassword:hover{color: #fff; text-decoration:none;}
+.option{font-size: 12px; padding-top: 8px;}
+.login .form-item, .login .form-actions {display: inline}
+.form-item-name #message_box {width: 120px; }
+
+.login #edit-pass-clear{display: none;}
+
+.returnLogin{border-top: 1px solid #392d26; padding-top: 20px; margin-top: 20px;}
+.returnLogin a{background: url(../images/arrow_left.png) 0px 3px no-repeat; padding-left: 14px; color: #c5b5a8; font-family:Georgia, "Times New Roman", Times, serif; font-style:italic; font-size: 12px;}
+.returnLogin a:hover{color: #fff;}
+
+.form-item,  .form-actions {margin: 0px !important; }
+label { display: none;}
+label a, label a:hover{text-decoration: underline;}
 .form-item .description {color: #8f837a }
+.password-suggestions  {position: absolute;left: -9999px;}
+.password-suggestions {display: none}
+.password-strength {width: 90px;  font-size: 12px; margin-top: 5px;}
+.password-strength-title {display: none;}
+.password-min {float: left;}
+.password-min, div.password-confirm  {color:#C5B5A8;font-family:Georgia,"Times New Roman",Times,serif;font-size:11px;font-style:italic; font-weight: normal;}
+.password-parent {margin:0;width:270px;}
+.password-indicator {display: none;}
+.password-strength-text {display: none;}
+div.password-confirm {display: none !important;}
 
 #fm-invite-request-form .form-text, #fm-invite-request-form .form-button, #fm-invite-request-form .form-text-readonly{float: left;}
-.form-text, .form-text-readonly { width: 185px; height: 26px; background: url(../images/bg_email.jpg) top left  repeat-x; padding-left: 4px;  border: none;}
 
 #fm-invite-request-form .form-submit {background: url(../images/bg_button_red.png) no-repeat scroll top right;}
 #fm-invite-request-form .form-submit:hover {background-position: 0 -26px;}
 
-#message_box { width: 220px; color: #fff; font-size: 11px; background: url(../images/arrow_error.png) 8px 6px no-repeat; padding-top: 6px; margin-top: 3px; }
+#message_box { margin: -10px 0 10px; width: 100%; color: #fff; font-size: 11px; background: url(../images/arrow_error.png) 8px 6px no-repeat; padding-top: 6px;  }
 #message_box .error { -moz-border-radius:3px 3px 3px 3px; background:none repeat scroll 0 0 #CC3333; padding:5px; width:180px; color: #fff; border: 0px solid #000; }
+
+.form-type-checkbox #message_box {float: right; margin-top: 1px;}
 
 label.invalid { margin-top: 6px; font-size: 11px; -moz-border-radius:3px 3px 3px 3px; background:none repeat scroll 0 0 #CC3333; padding:5px; color: #fff; border: 0px solid #000; }
 
