--- a/themes/fadmashion_commerce/css/front.css
+++ b/themes/fadmashion_commerce/css/front.css
@@ -34,7 +34,7 @@ h3 {color:#8A766B;font-family:Georgia,"Times New Roman",Times,serif;font-size:11
 /* registration */
 
 
-.form-text{color: #72655C; background: url(../images/bg_field.jpg) top left  repeat-x; height: 23px; line-height:23px; border: 1px solid #cbc1be; padding-left: 4px; width: 230px; margin: 4px 0 2px 0;}
+.form-text, .form-text-readonly{color: #72655C; background: url(../images/bg_field.jpg) top left  repeat-x; height: 23px; line-height:23px; border: 1px solid #cbc1be; padding-left: 4px; width: 230px; margin: 4px 0 2px 0;}
 .form-item input:focus { border-color: #BC4038 }
 
 .registrationForm {margin-bottom: 16px; }
