--- a/themes/fadmashion_commerce/css/style.css
+++ b/themes/fadmashion_commerce/css/style.css
@@ -91,11 +91,11 @@ label.invalid { margin-top: 6px; font-size: 11px; -moz-border-radius:3px 3px 3px
 #sectionHeader .title {float: left; border-right: 1px solid #dbd6d0; padding-right: 15px;margin-right: 15px; font-weight: 100; font-size: 18px; display: inline; position: relative; top: -2px;}
 #sectionHeader .title span{font-weight: 700;}
 #sectionHeader .text{float: left; font-size: 13px; display: inline;color: #3f3c39; }
-#sectionHeader .icons{float: left; margin-left: 5px; position: relative; top: -3px;}
+#sectionHeader .icons{float:left;margin-right:5px;position:relative;top:-6px;}
 #sectionHeader .icons img{width: 24px;}
-#sectionHeader .icons a{margin-left: 6px;}
+#sectionHeader .icons a{margin-right: 6px;}
 #sectionHeader #content{margin-top: 66px;}
-#sectionHeader .tweet{float: right; color: #3f3c39; width: 430px; font-size: 12px; position: relative; top: -7px;}
+#sectionHeader .tweet{float:right;font-size:12px;width:750px;}
 #sectionHeader .tweet img{width: 22px; float: left; margin: 0 5px 5px;}
                                                          
                                                          
