--- a/themes/fadmashion_commerce/css/front.css
+++ b/themes/fadmashion_commerce/css/front.css
@@ -19,13 +19,14 @@ a:hover {text-decoration: underline; }
 #box .pad{padding: 30px;background: url(../images/bg.png);}
 #box p{margin: 0 0 13px 0; color: #c8b8b0;font-size: 15px; line-height:18px; position: relative; top: -4px;  }
 
-span{color: #fff; font-weight:500}
-h1 {color:#FFFFFF;font-size:22px;font-weight:300;margin:0 0 2px;}
-h2 {font-size: 13px; line-height: 18px; font-weight: 300; margin: 0 0 8px 0; color: #c5b5a8;}
-h2 span {color:#FFFFFF;font-weight:700;}
-h3 {color:#8A766B;font-family:Georgia,"Times New Roman",Times,serif;font-size:11px;font-style:italic;font-weight:normal;margin:0 0 7px;text-align:right;}
-.logo{border-bottom: 1px solid #392d26; margin-top: 0px; margin-bottom: 16px; padding-bottom: 12px;}
-.logo img{margin-bottom: 12px; }
+h1{font-size: 26px;  font-weight: 100; margin: 4px 0 6px 0; color: #fff;}
+h2{font-size: 13px; line-height: 18px; font-weight: 300; margin: 0 0 8px 0; color: #c5b5a8;}
+h2 span{color: #fff; font-weight: 700;}
+h3{color: #8a766b; font-size: 11px; font-family: Georgia, "Times New Roman", Times, serif; margin: 0 0 7px 0; font-style: italic; font-weight:normal; text-align:right;}
+.logo{border-bottom: 1px solid #392d26; margin-top: 0px; margin-bottom: 18px; padding-bottom: 18px;}
+.logo img{margin-bottom: 0px; } 
+.slogan{color: #9c7f70; font-size: 15px; font-weight:500; border: none;}
+
 
 .register {padding:30px 0 0;}
 .register .button {font-size:14px;padding:7px 18px;}
