--- a/themes/fadmashion_commerce/css/style.css
+++ b/themes/fadmashion_commerce/css/style.css
@@ -11,7 +11,7 @@ h1 span{font-weight: 700}
 h2{font-size: 14px; font-weight:normal;margin: 0 0 10px 0;}
 h2 a{font-size: 14px;}
 ul{list-style-type: none;}
-.form-submit, a.button {cursor:pointer; -moz-border-radius:4px 4px 4px 4px; background:url("../images/b_bg_brown.jpg") repeat scroll left top transparent; color:#FFFFFF; font-family:"museo-sans-1","museo-sans-2",Helvetica; font-size:12px; font-style:normal; margin:10px 0;padding: 6px 12px}
+.form-submit, a.button {cursor:pointer; -moz-border-radius:4px; -webkit-border-radius: 4px; background:url("../images/b_bg_brown.jpg") repeat scroll left top transparent; color:#FFFFFF; font-family:"museo-sans-1","museo-sans-2",Helvetica; font-size:12px; font-style:normal; margin:10px 0;padding: 6px 12px}
 .green{background-image: url(../images/b_bg_green.jpg) !important}
 .red{background-image: url(../images/b_bg_red.jpg) !important}
 a.button.white{font-size: 15px; font-style: normal; background:#e9e5e0  url(../images/b_bg_white.jpg) top left repeat-x; border: 1px solid #e0dbd6; color: #0f6da3;}
@@ -99,7 +99,7 @@ div.messages{width: 690px;}
 #sectionHeader #content{margin-top: 66px;}
 #sectionHeader .tweet{float:right;font-size:13px;width:750px;}
 #sectionHeader .tweet img{width: 22px; float: left; margin: 0 5px 5px;}
- .shadow {display: none; background:url("../images/bg_dropPanel_shadow.png") repeat-x scroll left top transparent;;height:12px;}
+ .shadow {position: absolute; z-index: 10; width: 100%; display: none; background:url("../images/bg_dropPanel_shadow.png") repeat-x scroll left top transparent;;height:28px;}
 /* TODO: Only active one, maybe?*/
 #sectionHeader.dropped{background:url("../images/bg_dropPanel.png") repeat-y scroll center top #E7E4DD;
 font-family:"museo-sans-1","museo-sans-2",Helvetica;}
@@ -209,7 +209,7 @@ background:-moz-linear-gradient(100% 100% 90deg,#efecea,#ffffff);
 background:-webkit-gradient(linear,0% 0,0% 100%,from(#efecea),to(#ffffff));
 background-image:-o-linear-gradient(#efecea,#ffffff);
 filter:progid:DXImageTransform.Microsoft.gradient(startColorStr='#ffffff',EndColorStr='#efecea');-ms-filter:"progid:DXImageTransform.Microsoft.gradient(startColorStr='#ffffff', EndColorStr='#efecea')"; */border-radius:4px; -webkit-border-radius: 4px; -moz-border-radius: 4px;}
-#block-fm-deals-preview-fm-deals-preview h2{background: #8c7968; color: #fff; padding: 5px 0; border-top-left-radius: 4px; border-top-right-radius: 4px; font-size: 12px;}
+#block-fm-deals-preview-fm-deals-preview h2{background: #8c7968; color: #fff; padding: 5px 0; border-top-left-radius: 4px; border-top-right-radius: 4px; -webkit-border-top-left-radius: 4px; -moz-border-radius-topleft: 4px; -webkit-border-top-right-radius: 4px; -moz-border-radius-topright: 4px; font-size: 12px;}
 #block-fm-deals-preview-fm-deals-preview  h1{padding: 0 3px; margin: 12px 0 1px 0; font-size: 15px; font-weight:700}
 #block-fm-deals-preview-fm-deals-preview h3 a{font-size: 13px; font-weight: normal;}
 #block-fm-deals-preview-fm-deals-preview .button {padding: 18px 0; }
